css/styles.css
/*     
    width:100%;
    height: 300px;
    border: solid;
    border-width: 50px;
    border-top: 0px;
    border-width: 0px, 10px, 16px, 20px;
    padding: 20px;
    margin:10 px; //buffer zone
    position: relative, absolute, static, fixed
    top:
    right:
    font-size: // 100% = 16px = 1em


    About me page
}


*/

/******************* Element Selector ******************/

body{
    background-color: #F8F4EC;
    font-family: 'Quicksand', sans-serif;
}

h1, h3, h4{
    font-family: 'DM Serif Display', serif;
}

h1{
    display: inline;
    font-size: 4rem;
}

h3{
    text-align: center;
    font-size: 2rem;
    padding: 2rem 0;
}

h4{
    margin: 0;
}

a{
    text-decoration: none;
    color: black;
}

a:hover {
    color: black;
}

a:active{
    color:#A19882;
}

img{
    max-width: 100%;
}

table{
    table-layout: fixed;
    width: 100%;
    border-collapse: collapse;
    
}

.temp {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 20px;
}

.row>*{
    padding: 0;
}

/********************* Heading ***********************/

.heading-col{
    /* position: fixed; */
    display:flex;
    justify-content: center;
    align-items: center;
    /* width: 50%; */
    /* padding-left: 16%;
    padding-right: 14%;
    padding-top: 22%; */
    /* padding-bottom: 25%; */
    min-height: 80vh;
    
}

.heading-intro{
    width: 360px;
    overflow: hidden;
}

.heading-intro h3{
    text-align: justify;
}

.photo1{
    padding-right: 0px;
}

/******************* About Me **********************/

.container-aboutMe{
    background: #C2B8A3;
    width: 100%;
    height: 80vh;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}


.aboutMe{
    background: #F8F4EC;
    border-radius: 1%;
    width: 80%;
    height: auto;
    margin: 10px;
    padding: 8%;
}

.aboutMe h3{
    padding: 0 0 2rem 0;
}

/******************* Projects div *********************/
.projects{
    padding: 8vh 0 0 0;
}

.projects h4{
    text-align: center;
}

.projects-row{
    margin-left: 8vh;
    margin-right: 8vh;    
}

.projects-container{
    /* background: #F8F4EC; */
    padding: 12px;
    min-height: 80vh;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

.projects-info{
    background: #E6DDC6;
    border-radius: 1%;
    height: auto;
    margin: 8vh 0;
    padding: 8.5% 8.5% 4% 8.5%;
}

.projects-0{
    background: #F8F4EC;
}

.projects-1{
    background: #C2B8A3;
}

.projects-p{
    padding: 19px 0;
}


/******************* Technical Skills ********************/
.skills-container{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    /* justify-content: center; */
    align-items: center;
    
}

.skills h3{
    padding: 2rem 0;
}

.skills h4{
    height: auto;
    /* margin: 10px; */
    padding: 5% 10%;
    /* padding: 8.5%; */
}

.skills .row{
    background: #E6DDC6;
    border-radius: 1%;
    padding: 1rem 4rem;
    /* margin: 4rem 0; */

    /* background: #E6DDC6;
    /* border-radius: 1%; */
    /* padding: 4rem; */ 
}


/******************* Experiences ********************/


.experience{
    position: relative;
    top: 2rem;
}

.experience .row{
    background: #C2B8A3;
    border-radius: 1%;
    padding: 4rem;
    margin: 4rem 0;
}



.experience, .skills, .education, .contactMe{
    padding-left: 10%;
    padding-right: 10%;
}

/******************* Education ********************/

.education .row, .contactMe{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

.education .col-sm-6{
    background-color: #C2B8A3;
    border-radius: 1%;
    padding: 2rem;
    margin-bottom: 4rem;
}

.contactMe{
    margin: 0;
}




@media screen and (max-width: 600px) {
    h4 {
        font-size: 1.8rem;
    }

    .aboutMe{
        margin: 0;
        width: 98%;
    }
    .projects-row{
        margin: 0 2vh;
        padding: 4vh 0; 
    }
    .projects-info{
        margin: 4vh 0;
    }

    .projects-container{
        min-height: 40vh;
        padding: 12px 0 0 0;
    }

    .experience{
        margin: 0;
        padding: 0;
    }

    .experience .row{
        margin: 6vh 2vh;
        padding: 4vh;
    }

    .temp{
        padding: 1%;
    }

    .icon-text{
        font-size: x-small;
    }


    .skills{
        padding: 0;
    }

    .skills .row{
        margin: 0 2vh;
        padding: 2vh;
    }

    .skills h4{
        text-align: center;
    }
}
    

